--- a/app/src/main/res/layout/alarm.xml
+++ b/app/src/main/res/layout/alarm.xml
@@ -12,6 +12,6 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="221dp"
         android:gravity="center"
-        android:text="Alarm Done"
+        android:text="KeyLogger Scan is working"
         android:textSize="20sp" />
 </RelativeLayout>
